fix: add bearer header to users swagger
